[project]
name = "retracted-paper-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crypto>=1.4.1",
    "flask>=3.1.2",
    "huggingface>=0.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "pinecone>=7.3.0",
    "pymongo>=4.14.0",
    "qiskit>=2.1.2",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
